fix: enforce overflow hidden on html to prevent double scrollbar

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html,
 body {
     width: 100vw;
     max-width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 body {
